Final changes languages

--- a/frontend/src/i18n/locales/hi.json
+++ b/frontend/src/i18n/locales/hi.json
@@ -17,6 +17,9 @@
     "ineedJob": "मुझे नौकरी चाहिए",
     "oneDayWork": "एक दिन का काम"
   },
+  "instantly": "तुरंत",
+  "reliably": "विश्वसनीय रूप से",
+  "locally": "स्थानीय रूप से",
   "features": {
     "title": "हमारे प्लेटफॉर्म को क्यों चुनें?",
     "verified": {
