--- a/frontend/src/i18n/locales/kn.json
+++ b/frontend/src/i18n/locales/kn.json
@@ -1,37 +1,43 @@
 {
   "nav": {
-    "home": "ಮುಖ್ಯ",
-    "forEmployers": "ಉದ್ಯೋಗದಾತರಿಗಾಗಿ",
-    "forWorkers": "ಕಾರ್ಮಿಕರಿಗಾಗಿ",
-    "oneDayJob": "ಒಂದು ದಿನದ ಕೆಲಸ",
-    "contactUs": "ನಮ್ಮನ್ನು ಸಂಪರ್ಕಿಸಿ",
-    "login": "ಲಾಗಿನ್",
-    "logout": "ಲಾಗೌಟ್",
+    "home": "ಮುಖಪುಟ",
+    "blog": "ಬ್ಲಾಗ್",
+    "jobs": "ಕೆಲಸಗಳು",
+    "learning": "ಕಲಿಕೆ",
+    "resumeBuilder": "ರೆಸ್ಯೂಮ್ ನಿರ್ಮಾಪಕ",
+    "postJob": "ಕೆಲಸ ಪೋಸ್ಟ್ ಮಾಡಿ",
+    "logout": "ಲಾಗ್ ಔಟ್",
     "profile": "ಪ್ರೊಫೈಲ್",
-    "dashboard": "ಡ್ಯಾಶ್‌ಬೋರ್ಡ್"
+    "dashboard": "ಡ್ಯಾಶ್‌ಬೋರ್ಡ್",
+    "candidateLogin": "ಕೆಲಸ ಹುಡುಕುವವರ ಲಾಗಿನ್",
+    "employerLogin": "ನಿಯೋಜಕರ ಲಾಗಿನ್"
+  },
+  "features": {
+    "title": "ಓಜೆಕೆ ಜಾಬ್ಸ್ ಅನ್ನು ಏಕೆ ಬಳಸಬೇಕು?",
+    "verified": {
+      "title": "ಸರಿಯಾದ ನಿಯೋಜಕರು ಮತ್ತು ಉದ್ಯೋಗಾರ್ಥಿಗಳು",
+      "description": "ಎಲ್ಲಾ ಬಳಕೆದಾರರು ಸುರಕ್ಷಿತ ಮತ್ತು ನಂಬಿಕಸ್ಥ ಅನುಭವಕ್ಕಾಗಿ ಪರಿಶೀಲಿಸಲ್ಪಟ್ಟಿದ್ದಾರೆ."
+    },
+    "fast": {
+      "title": "ವೇಗದ ನೇಮಕಾತಿ",
+      "description": "24 ಗಂಟೆಗಳಲ್ಲಿ ಕೆಲಸ ಪಡೆಯಿರಿ ಅಥವಾ ನೇಮಕ ಮಾಡಿ, ತಕ್ಷಣದ ಸೂಚನೆಗಳೊಂದಿಗೆ."
+    },
+    "local": {
+      "title": "ಸ್ಥಳೀಯ ಅವಕಾಶಗಳು",
+      "description": "ನಿಮ್ಮ ನಗರ ಅಥವಾ ಪ್ರದೇಶದಲ್ಲಿ ಕೆಲಸಗಳು ಮತ್ತು ಪ್ರತಿಭೆಯನ್ನು ಹುಡುಕಿ."
+    }
   },
   "hero": {
     "title": "ಕೊಂಗು ನಾಡಿನಲ್ಲಿ ಉದ್ಯೋಗ ಅಂತರವನ್ನು ತುಂಬುವುದು",
     "subtitle": "ನಿಮ್ಮ ಸ್ಥಳೀಯ ಪ್ರದೇಶದಲ್ಲಿ ಪರಿಶೀಲಿಸಲಾದ ಉದ್ಯೋಗದಾತರು ಮತ್ತು ಕುಶಲ ಕಾರ್ಮಿಕರೊಂದಿಗೆ ಸಂಪರ್ಕ ಸಾಧಿಸಿ",
     "imHiring": "ನಾನು ನೇಮಕ ಮಾಡುತ್ತಿದ್ದೇನೆ",
     "ineedJob": "ನನಗೆ ಕೆಲಸ ಬೇಕು",
-    "oneDayWork": "ಒಂದು ದಿನದ ಕೆಲಸ"
+    "oneDayWork": "ಒಂದು ದಿನದ ಕೆಲಸ",
+    "instantly": "ತಕ್ಷಣ",
+    "reliably": "ನಂಬಿಕೆಯಿಂದ",
+    "locally": "ಸ್ಥಳೀಯವಾಗಿ"
   },
-  "features": {
-    "title": "ನಮ್ಮ ಪ್ಲಾಟ್‌ಫಾರ್ಮ್ ಅನ್ನು ಏಕೆ ಆಯ್ಕೆ ಮಾಡಬೇಕು?",
-    "verified": {
-      "title": "ಪರಿಶೀಲಿಸಲಾದ ಬಳಕೆದಾರರು",
-      "description": "ಎಲ್ಲಾ ಉದ್ಯೋಗದಾತರು ಮತ್ತು ಕಾರ್ಮಿಕರು KYC ಪ್ರಕ್ರಿಯೆಯ ಮೂಲಕ ಪರಿಶೀಲಿಸಲಾಗಿದೆ"
-    },
-    "fast": {
-      "title": "24 ಗಂಟೆಗಳ ನೇಮಕ",
-      "description": "ತ್ವರಿತ ಅಧಿಸೂಚನೆಗಳೊಂದಿಗೆ ವೇಗದ ನೇಮಕ ಪ್ರಕ್ರಿಯೆ"
-    },
-    "local": {
-      "title": "ಸ್ಥಳೀಯ ಮಾನವ ಸಂಪನ್ಮೂಲ",
-      "description": "ನಿಮ್ಮ ಸ್ಥಳೀಯ ಪ್ರದೇಶದಲ್ಲಿ ಕುಶಲ ಕಾರ್ಮಿಕರೊಂದಿಗೆ ಸಂಪರ್ಕ ಸಾಧಿಸಿ"
-    }
-  },
+  
   "industries": {
     "title": "ನಾವು ಸೇವೆ ಮಾಡುವ ಕೈಗಾರಿಕೆಗಳು",
     "textile": "ವಸ್ತ್ರ ಮತ್ತು ಉಡುಪುಗಳು",
