--- a/frontend/src/i18n/locales/ml.json
+++ b/frontend/src/i18n/locales/ml.json
@@ -1,37 +1,43 @@
 {
   "nav": {
     "home": "ഹോം",
-    "forEmployers": "തൊഴിലുടമകൾക്ക്",
-    "forWorkers": "തൊഴിലാളികൾക്ക്",
-    "oneDayJob": "ഒരു ദിവസത്തെ ജോലി",
-    "contactUs": "ഞങ്ങളെ ബന്ധപ്പെടുക",
-    "login": "ലോഗിൻ",
-    "logout": "ലോഗൗട്ട്",
+    "blog": "ബ്ലോഗ്",
+    "jobs": "ജോലികൾ",
+    "learning": "പഠനം",
+    "resumeBuilder": "റിസ്യൂം ബിൽഡർ",
+    "postJob": "ജോലി പോസ്റ്റ് ചെയ്യുക",
+    "logout": "ലോഗ് ഔട്ട്",
     "profile": "പ്രൊഫൈൽ",
-    "dashboard": "ഡാഷ്ബോർഡ്"
+    "dashboard": "ഡാഷ്ബോർഡ്",
+    "candidateLogin": "ജോലി അന്വേഷിക്കുന്നവരുടെ ലോഗിൻ",
+    "employerLogin": "എമ്പ്ലോയർ ലോഗിൻ"
+  },
+  "features": {
+    "title": "OJK ജോലികൾ ഉപയോഗിക്കേണ്ടതെന്തിന്?",
+    "verified": {
+      "title": "പരിശോധിച്ച എംപ്ലോയർമാർയും ജോലിഅന്വേഷകരും",
+      "description": "എല്ലാ ഉപയോക്താക്കളും സുരക്ഷിതവും വിശ്വസനീയവുമായ അനുഭവത്തിനായി പരിശോധിച്ചിരിക്കുന്നു."
+    },
+    "fast": {
+      "title": "വേഗത്തിലുള്ള നിയമനം",
+      "description": "24 മണിക്കൂറിനുള്ളിൽ ജോലി നേടുക അല്ലെങ്കിൽ നിയമിക്കുക, തൽക്ഷണ അറിയിപ്പുകളോടെ."
+    },
+    "local": {
+      "title": "പ്രാദേശിക അവസരങ്ങൾ",
+      "description": "നിങ്ങളുടെ നഗരം അല്ലെങ്കിൽ പ്രദേശത്ത് ജോലികളും കഴിവുകളും കണ്ടെത്തുക."
+    }
   },
   "hero": {
     "title": "കൊങ്കു നാട്ടിലെ തൊഴിൽ വിടവ് നികത്തുക",
     "subtitle": "നിങ്ങളുടെ പ്രാദേശിക പ്രദേശത്തെ സാധൂകരിക്കപ്പെട്ട തൊഴിലുടമകളുമായും നൈപുണ്യമുള്ള തൊഴിലാളികളുമായും ബന്ധപ്പെടുക",
     "imHiring": "ഞാൻ നിയമിക്കുന്നു",
     "ineedJob": "എനിക്ക് ജോലി വേണം",
-    "oneDayWork": "ഒരു ദിവസത്തെ ജോലി"
+    "oneDayWork": "ഒരു ദിവസത്തെ ജോലി",
+    "instantly": "ഉടൻ",
+    "reliably": "വിശ്വസനീയമായി",
+    "locally": "പ്രാദേശികമായി"
   },
-  "features": {
-    "title": "എന്തുകൊണ്ട് ഞങ്ങളുടെ പ്ലാറ്റ്‌ഫോം തിരഞ്ഞെടുക്കണം?",
-    "verified": {
-      "title": "സാധൂകരിക്കപ്പെട്ട ഉപയോക്താക്കൾ",
-      "description": "എല്ലാ തൊഴിലുടമകളും തൊഴിലാളികളും KYC പ്രക്രിയയിലൂടെ സാധൂകരിക്കപ്പെട്ടവരാണ്"
-    },
-    "fast": {
-      "title": "24 മണിക്കൂർ നിയമനം",
-      "description": "തൽക്ഷണ അറിയിപ്പുകളോടെ വേഗത്തിലുള്ള നിയമന പ്രക്രിയ"
-    },
-    "local": {
-      "title": "പ്രാദേശിക മനുഷ്യവിഭവശേഷി",
-      "description": "നിങ്ങളുടെ പ്രാദേശിക പ്രദേശത്തെ നൈപുണ്യമുള്ള തൊഴിലാളികളുമായി ബന്ധപ്പെടുക"
-    }
-  },
+  
   "industries": {
     "title": "ഞങ്ങൾ സേവനം നൽകുന്ന വ്യവസായങ്ങൾ",
     "textile": "തുണി നിർമ്മാണവും വസ്ത്രങ്ങളും",
