--- a/frontend/src/i18n/locales/ta.json
+++ b/frontend/src/i18n/locales/ta.json
@@ -1,35 +1,40 @@
 {
   "nav": {
     "home": "முகப்பு",
-    "forEmployers": "வேலைவாய்ப்பாளர்களுக்கு",
-    "forWorkers": "தொழிலாளர்களுக்கு",
-    "oneDayJob": "ஒரு நாள் வேலை",
-    "contactUs": "எங்களைத் தொடர்பு கொள்ளுங்கள்",
-    "login": "உள்நுழையவும்",
+    "blog": "வலைப்பதிவு",
+    "jobs": "வேலைகள்",
+    "learning": "கற்றல்",
+    "resumeBuilder": "ரெஸ்யூம் உருவாக்கி",
+    "postJob": "வேலை இடுகை",
     "logout": "வெளியேறு",
     "profile": "சுயவிவரம்",
-    "dashboard": "டாஷ்போர்டு"
+    "dashboard": "டாஷ்போர்டு",
+    "candidateLogin": "வேலை தேடுபவர் உள்நுழைவு",
+    "employerLogin": "நியமிப்பாளர் உள்நுழைவு"
   },
   "hero": {
     "title": "கொங்கு நாட்டில் வேலை இடைவெளியை நீக்குதல்",
     "subtitle": "உங்கள் உள்ளூர் பகுதியில் சரிபார்க்கப்பட்ட வேலைவாய்ப்பாளர்கள் மற்றும் திறமையான தொழிலாளர்களுடன் இணைந்து கொள்ளுங்கள்",
     "imHiring": "நான் வேலை தருகிறேன்",
     "ineedJob": "எனக்கு வேலை வேண்டும்",
-    "oneDayWork": "ஒரு நாள் வேலை"
+    "oneDayWork": "ஒரு நாள் வேலை",
+    "instantly": "உடனடி",
+    "reliably": "நம்பகமாக",
+    "locally": "உள்ளூரில்"
   },
   "features": {
-    "title": "எங்கள் தளத்தை ஏன் தேர்வு செய்ய வேண்டும்?",
+    "title": "ஓஜேகே வேலைகளை ஏன் பயன்படுத்த வேண்டும்?",
     "verified": {
-      "title": "சரிபார்க்கப்பட்ட பயனர்கள்",
-      "description": "அனைத்து வேலைவாய்ப்பாளர்கள் மற்றும் தொழிலாளர்கள் KYC செயல்முறை மூலம் சரிபார்க்கப்படுகிறார்கள்"
+      "title": "சரிபார்க்கப்பட்ட நியமிப்பாளர்கள் மற்றும் வேலை தேடுபவர்கள்",
+      "description": "அனைத்து பயனர்களும் பாதுகாப்பான மற்றும் நம்பகமான அனுபவத்திற்கு சரிபார்க்கப்படுகிறார்கள்."
     },
     "fast": {
-      "title": "24 மணி நேர பணியமர்த்தல்",
-      "description": "உடனடி அறிவிப்புகளுடன் விரைவான பணியமர்த்தல் செயல்முறை"
+      "title": "விரைவான பணியமர்த்தல்",
+      "description": "24 மணி நேரத்திற்குள் வேலைக்கு சேருங்கள் அல்லது நியமியுங்கள், உடனடி அறிவிப்புகளுடன்."
     },
     "local": {
-      "title": "உள்ளூர் மனிதவளம்",
-      "description": "உங்கள் உள்ளூர் பகுதியில் திறமையான தொழிலாளர்களுடன் இணைந்து கொள்ளுங்கள்"
+      "title": "உள்ளூர் வாய்ப்புகள்",
+      "description": "உங்கள் நகரம் அல்லது பகுதியில் வேலைகளையும் திறமையையும் கண்டறியுங்கள்."
     }
   },
   "industries": {
