--- a/frontend/src/i18n/locales/te.json
+++ b/frontend/src/i18n/locales/te.json
@@ -1,37 +1,43 @@
 {
   "nav": {
     "home": "హోమ్",
-    "forEmployers": "యజమానుల కోసం",
-    "forWorkers": "కార్మికుల కోసం",
-    "oneDayJob": "ఒక రోజు పని",
-    "contactUs": "మమ్మల్ని సంప్రదించండి",
-    "login": "లాగిన్",
-    "logout": "లాగౌట్",
+    "blog": "బ్లాగ్",
+    "jobs": "ఉద్యోగాలు",
+    "learning": "నెర్చుకోవడం",
+    "resumeBuilder": "రెజ్యూమ్ బిల్డర్",
+    "postJob": "ఉద్యోగాన్ని పోస్ట్ చేయండి",
+    "logout": "లాగ్ అవుట్",
     "profile": "ప్రొఫైల్",
-    "dashboard": "డాష్‌బోర్డ్"
+    "dashboard": "డాష్‌బోర్డ్",
+    "candidateLogin": "ఉద్యోగార్థి లాగిన్",
+    "employerLogin": "ఎంప్లాయర్ లాగిన్"
+  },
+  "features": {
+    "title": "OJK Jobs ను ఎందుకు ఉపయోగించాలి?",
+    "verified": {
+      "title": "ధృవీకరించబడిన ఎంప్లాయర్లు & ఉద్యోగార్థులు",
+      "description": "అన్ని వినియోగదారులు సురక్షితమైన మరియు నమ్మదగిన అనుభవం కోసం ధృవీకరించబడ్డారు."
+    },
+    "fast": {
+      "title": "త్వరిత నియామకం",
+      "description": "24 గంటల్లో ఉద్యోగాన్ని పొందండి లేదా నియమించండి, తక్షణ సూచనలతో."
+    },
+    "local": {
+      "title": "ప్రాంతీయ అవకాశాలు",
+      "description": "మీ నగరం లేదా ప్రాంతంలో ఉద్యోగాలు మరియు ప్రతిభను కనుగొనండి."
+    }
   },
   "hero": {
     "title": "కొంగు నాడులో ఉద్యోగ అంతరాన్ని తగ్గించడం",
     "subtitle": "మీ స్థానిక ప్రాంతంలో ధృవీకరించబడిన యజమానులు మరియు నైపుణ్యం కలిగిన కార్మికులతో కనెక్ట్ అవ్వండి",
     "imHiring": "నేను పనిని ఇస్తున్నాను",
     "ineedJob": "నాకు ఉద్యోగం కావాలి",
-    "oneDayWork": "ఒక రోజు పని"
+    "oneDayWork": "ఒక రోజు పని",
+    "instantly": "తక్షణమే",
+    "reliably": "నమ్మదగినదిగా",
+    "locally": "ప్రాంతీయంగా"
   },
-  "features": {
-    "title": "మా ప్లాట్‌ఫారమ్‌ను ఎందుకు ఎంచుకోవాలి?",
-    "verified": {
-      "title": "ధృవీకరించబడిన వినియోగదారులు",
-      "description": "అన్ని యజమానులు మరియు కార్మికులు KYC ప్రక్రియ ద్వారా ధృవీకరించబడ్డారు"
-    },
-    "fast": {
-      "title": "24 గంటల నియామకం",
-      "description": "తక్షణ నోటిఫికేషన్లతో త్వరిత నియామక ప్రక్రియ"
-    },
-    "local": {
-      "title": "స్థానిక మానవ వనరులు",
-      "description": "మీ స్థానిక ప్రాంతంలో నైపుణ్యం కలిగిన కార్మికులతో కనెక్ట్ అవ్వండి"
-    }
-  },
+
   "industries": {
     "title": "మేము సేవ చేసే పరిశ్రమలు",
     "textile": "వస్త్రం మరియు దుస్తులు",
